@@ -34,6 +34,7 @@ DFHack Future
         buildingplan: Now supports hatch covers
         gui/hack-wish now properly assigns quality to items.
         gui/gm-editor handles lua tables properly
+        manipulator: fixed crash when selecting custom professions when none are found
         search: fixed crash in unit list after cancelling a job
         stockpiles: now checks/sanitizes filenames when saving
         stocks: fixed a crash when right-clicking
